--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_EMBED_MODEL=text-embedding-3-small
+AI_PROVIDER=openai
+DEBUG=false
 DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres:5432/lfcie
 REDIS_URL=redis://redis:6379/0
 MAX_CHUNKS_PER_QUERY=8
