--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,3 +22,27 @@ jobs:
         run: make lint
       - name: Test
         run: make test
+      - name: Prepare eval env
+        run: |
+          cp .env.example .env
+          sed -i 's/^AI_PROVIDER=.*/AI_PROVIDER=fake/' .env
+          sed -i 's/^DEBUG=.*/DEBUG=true/' .env
+      - name: Start stack
+        run: AI_PROVIDER=fake DEBUG=true docker compose up -d --build
+      - name: Wait for API
+        run: |
+          for i in {1..30}; do
+            if curl -sf http://localhost:8000/health >/dev/null; then
+              exit 0
+            fi
+            sleep 2
+          done
+          docker compose logs api
+          exit 1
+      - name: Eval
+        run: make eval
+      - name: Eval verified
+        run: make eval-verified
+      - name: Tear down stack
+        if: always()
+        run: docker compose down -v
