Added hard quality gates to the verified eval runner and wired CI to spin up the stack in fake mode, run make eval + make eval-verified, and fail on threshold breaches.  Quality gates live in run_eval_verified.py (invalid evidence IDs == 0, answerable pass rate ≥ 0.95, avg claims per answerable ≥ 2, unsupported rate ≤ 0.75), and the report now includes a “Quality Gates” section with pass/fail details. CI now prepares a .env, starts Docker Compose with AI_PROVIDER=fake/DEBUG=true, waits for /health, then runs both eval targets and tears down the stack in ci.yml. Files changed/added:  run_eval_verified.py ci.yml  Implemented ingestion hardening, retrieval diversification, and ops readiness features in one pass: PDFs now enforce size/page limits with actionable errors; chunking prefers sentence/paragraph boundaries and stores char offsets; retrieval supports per-request rerank override plus an MMR-style diversity pass; API now has structured logging with request IDs, dependency health checks, optional API key auth, rate limiting, and the worker runs as a pinned non-root user.  Details and context:  Ingestion robustness and chunk metadata live in tasks.py and chunking.py, with new char_start/char_end persisted via models.py and 0003_add_chunk_char_offsets.py. Retrieval changes are in retrieval.py (MMR) and reranker.py (per-request override), with schemas.py exposing rerank. Ops readiness is in logging.py, middleware.py, security.py, health.py, main.py, plus docker-compose.yml and .env.example. Files changed/added:  schemas.py retrieval.py reranker.py query.py query_verified.py sources.py health.py main.py middleware.py security.py settings.py chunking.py models.py logging.py tasks.py worker.py 0003_add_chunk_char_offsets.py docker-compose.yml .env.example README.md Notes:  API key auth is optional; if API_KEY is set, send X-API-Key with requests. New health endpoint: GET /health/deps for DB/Redis checks. Rerank can now be toggled per request via {"rerank": true/false}. 

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,19 @@ DEBUG=false
 DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres:5432/lfcie
 REDIS_URL=redis://redis:6379/0
 MAX_CHUNKS_PER_QUERY=8
+RERANK_ENABLED=true
+RERANK_CANDIDATES=30
+RERANK_SNIPPET_CHARS=900
+MMR_ENABLED=true
+MMR_LAMBDA=0.7
+MMR_CANDIDATES=30
 CHUNK_CHAR_TARGET=5000
 CHUNK_CHAR_OVERLAP=800
+MAX_PDF_BYTES=25000000
+MAX_PDF_PAGES=300
+API_KEY=
+RATE_LIMIT_RPS=0
+RATE_LIMIT_BURST=0
+LOG_LEVEL=INFO
+APP_UID=1000
+APP_GID=1000
