Implemented source-aware retrieval with per‑source budgeting for grouped endpoints, added grouped response schemas/endpoints, and added a multisource eval harness + fixture/dataset + CI/Make/docs/test coverage. Existing /query and /query/verified responses are unchanged.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DEBUG=false
 DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres:5432/lfcie
 REDIS_URL=redis://redis:6379/0
 MAX_CHUNKS_PER_QUERY=8
+PER_SOURCE_RETRIEVAL_LIMIT=10
 RERANK_ENABLED=true
 RERANK_CANDIDATES=30
 RERANK_SNIPPET_CHARS=900
