Production security baseline
Added a REQUIRE_API_KEY setting and a startup-time guard that refuses to boot when the key is required but missing, while keeping the existing “optional API key” behavior when the toggle is off. The startup validation lives in main.py so it only runs during app startup, and the new setting is defined in settings.py.

Startup enforcement: main.py raises a clear RuntimeError when settings.require_api_key is true and settings.api_key is blank.
Settings: settings.py adds require_api_key parsed from REQUIRE_API_KEY.
Tests: test_answer_auth.py covers startup failure/success paths when the toggle is on.
Docs: README.md documents REQUIRE_API_KEY with a production recommendation; CHANGELOG.md notes the new enforcement.

----

Moved the /debug/* routes into a dedicated router and only mount them when DEBUG=true, so they disappear from OpenAPI and return 404 otherwise. Added a create_app() factory to make debug-on/off behavior testable without changing existing imports.

debug.py holds the debug endpoints with the same API key dependency and a runtime debug guard.
sources.py no longer defines debug routes.
main.py now builds the app via create_app() and conditionally includes the debug router.
test_debug_endpoints.py covers 404 + OpenAPI exclusion when DEBUG=false and 401/200 + schema inclusion when DEBUG=true.
README.md documents that debug endpoints only exist when DEBUG=true and are excluded in production.

-----

Added guardrails for rate limiting so unsafe in-memory settings can’t slip into multi-worker/production, and made the middleware conditional based on the new backend switch. The startup validation lives in main.py and uses worker detection from settings.py, while docs/tests capture the intended production approach.

Settings: settings.py adds RATE_LIMIT_BACKEND plus detect_max_workers() for WEB_CONCURRENCY/UVICORN_WORKERS.
App wiring: main.py blocks unsafe memory limiter configs and only installs RateLimitMiddleware when RATE_LIMIT_BAC

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ CHUNK_CHAR_OVERLAP=800
 MAX_PDF_BYTES=25000000
 MAX_PDF_PAGES=300
 API_KEY=
+RATE_LIMIT_BACKEND=memory
 RATE_LIMIT_RPS=0
 RATE_LIMIT_BURST=0
 LOG_LEVEL=INFO
