--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,10 @@ RATE_LIMIT_BACKEND=memory
 RATE_LIMIT_RPS=0
 RATE_LIMIT_BURST=0
 LOG_LEVEL=INFO
+METRICS_ENABLED=true
+METRICS_PATH=/metrics
+OTEL_ENABLED=false
+OTEL_SERVICE_NAME=long-form-content-intelligence-api
+OTEL_EXPORTER_OTLP_ENDPOINT=
 APP_UID=1000
 APP_GID=1000
