--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "sqlalchemy>=2.0",
   "psycopg[binary]>=3.1",
   "alembic>=1.13",
+  "prometheus_client>=0.20",
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
   "python-multipart>=0.0.9",
@@ -16,6 +17,11 @@ dependencies = [
   "celery>=5.3",
   "pymupdf>=1.23",
   "openai>=1.14",
+  "opentelemetry-api>=1.24",
+  "opentelemetry-sdk>=1.24",
+  "opentelemetry-exporter-otlp>=1.24",
+  "opentelemetry-instrumentation-fastapi>=0.45b0",
+  "opentelemetry-instrumentation-requests>=0.45b0",
   "pgvector>=0.2.5",
   "tenacity>=8.2",
 ]
