--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,8 +14,7 @@ COPY . /app
 
 RUN python -m pip install --upgrade pip \
   && python -m pip wheel --no-cache-dir --wheel-dir /wheels . \
-  && python -m pip wheel --no-cache-dir --no-deps --wheel-dir /wheels/app . \
-  && cp /wheels/app/*.whl /wheels/app.whl
+  && python -m pip wheel --no-cache-dir --no-deps --wheel-dir /wheels/app .
 
 FROM python:3.11-slim AS runtime
 
@@ -34,7 +33,7 @@ RUN groupadd -g ${APP_GID} app \
 COPY --from=builder /wheels /wheels
 
 RUN python -m pip install --no-cache-dir --no-index --find-links=/wheels \
-    /wheels/app.whl \
+    /wheels/app/*.whl \
   && rm -rf /wheels
 
 COPY migrations /app/migrations
@@ -47,7 +46,7 @@ USER app
 
 EXPOSE 8000
 
-HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=2s --retries=3 \
   CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=2).read()"
 
 CMD ["sh", "-c", "uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-${WEB_CONCURRENCY:-2}}"]
