Removed the automatic teardown so the prod stack stays running after make smoke-prod, and added a clear message to use make down-prod when you’re done.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -60,6 +60,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    healthcheck:
+      disable: true
     volumes:
       - storage_data:/app/storage
     command: celery -A services.ingest.worker.celery_app worker --loglevel=info
