--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.6
 FROM python:3.11-slim AS builder
 
 WORKDIR /app
@@ -6,15 +7,17 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1
 
-RUN apt-get update \
-  && apt-get install -y --no-install-recommends build-essential \
-  && rm -rf /var/lib/apt/lists/*
+RUN --mount=type=cache,target=/var/cache/apt \
+  --mount=type=cache,target=/var/lib/apt/lists \
+  apt-get update \
+  && apt-get install -y --no-install-recommends build-essential
 
 COPY . /app
 
-RUN python -m pip install --upgrade pip \
-  && python -m pip wheel --no-cache-dir --wheel-dir /wheels . \
-  && python -m pip wheel --no-cache-dir --no-deps --wheel-dir /wheels/app .
+RUN --mount=type=cache,target=/root/.cache/pip \
+  python -m pip install --upgrade pip \
+  && python -m pip wheel --wheel-dir /wheels . \
+  && python -m pip wheel --no-deps --wheel-dir /wheels/app .
 
 FROM python:3.11-slim AS runtime
 
