--- a/.dockerignore
+++ b/.dockerignore
@@ -3,23 +3,31 @@
 .idea
 .vscode
 .venv
+.venv/
 .venv_pdf
+.venv_pdf/
 __pycache__/
 *.pyc
 .pytest_cache/
+.pytest_cache
 .mypy_cache/
+.mypy_cache
 .ruff_cache/
+.ruff_cache
 dist/
 build/
 *.egg-info/
 node_modules/
+**/node_modules/
 .next/
+**/.next/
 .turbo/
 .vercel/
 apps/web/.next/
 apps/web/.turbo/
 apps/web/.vercel/
 apps/web/out/
+apps/web/node_modules/
 .env
 .env.*
 scripts/eval/out/
