--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - .:/app
       - storage_data:/app/storage
     command: >
-      /bin/sh -c "alembic upgrade head && uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --reload"
+      /bin/sh -c "alembic upgrade head && uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --reload --reload-dir /app/apps/api --reload-dir /app/packages --reload-dir /app/services --reload-dir /app/migrations"
 
   worker:
     build:
