--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ CHUNK_CHAR_OVERLAP=800
 MAX_PDF_BYTES=25000000
 MAX_PDF_PAGES=300
 API_KEY=
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
+NEXT_PUBLIC_API_KEY=
 RATE_LIMIT_BACKEND=memory
 RATE_LIMIT_RPS=0
 RATE_LIMIT_BURST=0
