--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -47,6 +47,19 @@ services:
     command: >
       /bin/sh -c "alembic upgrade head && uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-${WEB_CONCURRENCY:-2}}"
 
+  web:
+    image: lfcie-web
+    build:
+      context: ./apps/web
+      target: prod
+    environment:
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-http://localhost:8000}
+      NEXT_PUBLIC_API_KEY: ${NEXT_PUBLIC_API_KEY:-}
+    depends_on:
+      - api
+    ports:
+      - "3000:3000"
+
   worker:
     image: lfcie-prod
     env_file: .env
