I added CORS support to the API and a configurable CORS_ORIGINS

--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,6 @@ METRICS_PATH=/metrics
 OTEL_ENABLED=false
 OTEL_SERVICE_NAME=long-form-content-intelligence-api
 OTEL_EXPORTER_OTLP_ENDPOINT=
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 APP_UID=1000
 APP_GID=1000
