Tightened P1 ops/security knobs by gating metrics behind API key checks, switching the prod healthcheck to the dependency-aware endpoint, and adding restart policies for the prod compose services to improve self-healing.
Details and rationale:

/metrics now uses the same X-API-Key guard as the rest of the API, so it’s only protected when API_KEY is set; this aligns metrics exposure with production auth expectations. metrics.py (line 1)
The production image healthcheck now calls /health/deps so readiness reflects DB/Redis status instead of only API liveness. Dockerfile.prod (line 54)
docker-compose.prod.yml services now use restart: unless-stopped for basic resiliency in compose-based deploys. docker-compose.prod.yml (line 2)

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -52,6 +52,6 @@ USER app
 EXPOSE 8000
 
 HEALTHCHECK --interval=30s --timeout=2s --retries=3 \
-  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health', timeout=2).read()"
+  CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health/deps', timeout=2).read()"
 
 CMD ["sh", "-c", "uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-${WEB_CONCURRENCY:-2}}"]
