URL ingest now enforces a max byte limit with streaming reads, embeddings are batched with a configurable size, and the new settings are documented.

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ CHUNK_CHAR_TARGET=5000
 CHUNK_CHAR_OVERLAP=800
 MAX_PDF_BYTES=25000000
 MAX_PDF_PAGES=300
+MAX_URL_BYTES=2000000
+EMBED_BATCH_SIZE=64
 API_KEY=
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_API_KEY=
