--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,6 @@ OTEL_ENABLED=false
 OTEL_SERVICE_NAME=long-form-content-intelligence-api
 OTEL_EXPORTER_OTLP_ENDPOINT=
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+URL_ALLOWLIST=
 APP_UID=1000
 APP_GID=1000
