--- a/.env.example
+++ b/.env.example
@@ -19,9 +19,14 @@ MAX_PDF_BYTES=25000000
 MAX_PDF_PAGES=300
 MAX_URL_BYTES=2000000
 EMBED_BATCH_SIZE=64
+EMBED_DIM=1536
 API_KEY=
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_MAX_PDF_BYTES=25000000
+NEXT_PUBLIC_MAX_PDF_PAGES=300
+NEXT_PUBLIC_MAX_URL_BYTES=2000000
+NEXT_PUBLIC_URL_INGEST_ENABLED=true
 RATE_LIMIT_BACKEND=memory
 RATE_LIMIT_RPS=0
 RATE_LIMIT_BURST=0
@@ -33,5 +38,6 @@ OTEL_SERVICE_NAME=long-form-content-intelligence-api
 OTEL_EXPORTER_OTLP_ENDPOINT=
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 URL_ALLOWLIST=
+STORAGE_ROOT=storage
 APP_UID=1000
 APP_GID=1000
