--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,3 +95,76 @@ jobs:
       - name: Tear down stack
         if: always()
         run: docker compose down -v
+
+  openai-smoke:
+    needs: lint-test
+    if: ${{ secrets.OPENAI_API_KEY != '' }}
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install dev dependencies
+        run: |
+          python3 -m pip install -U pip
+          python3 -m pip install -e ".[dev]"
+      - name: Prepare OpenAI env
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          python3 - <<'PY'
+          import os
+          from pathlib import Path
+          api_key = os.environ["OPENAI_API_KEY"]
+          Path(".env").write_text(
+              "\n".join(
+                  [
+                      "AI_PROVIDER=openai",
+                      f"OPENAI_API_KEY={api_key}",
+                      "API_KEY=openai-smoke",
+                      "DEBUG=true",
+                      "DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres:5432/lfcie",
+                      "REDIS_URL=redis://redis:6379/0",
+                  ]
+              )
+              + "\n",
+              encoding="utf-8",
+          )
+          PY
+      - name: Start stack
+        run: docker compose --env-file .env up -d --build
+      - name: Wait for API
+        run: |
+          for i in {1..30}; do
+            if curl -sf http://localhost:8000/health >/dev/null; then
+              deps_status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8000/health/deps || true)
+              if [ "$deps_status" = "200" ] || [ "$deps_status" = "404" ]; then
+                exit 0
+              fi
+            fi
+            sleep 2
+          done
+          docker compose logs api
+          exit 1
+      - name: OpenAI smoke eval
+        env:
+          API_KEY: openai-smoke
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          EVAL_READY_TIMEOUT_SECONDS: "120"
+          EVAL_HTTP_TIMEOUT_SECONDS: "45"
+        run: python3 tests/eval/run_eval_openai_smoke.py
+      - name: Upload eval reports on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: eval-openai-smoke-reports
+          path: |
+            tests/eval/out/eval_openai_smoke_report.md
+            tests/eval/out/eval_openai_smoke_results.json
+      - name: Tear down stack
+        if: always()
+        run: docker compose down -v
