--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -2,3 +2,7 @@
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 # Optional. Browser keys are public; use limited keys.
 NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_MAX_PDF_BYTES=25000000
+NEXT_PUBLIC_MAX_PDF_PAGES=300
+NEXT_PUBLIC_MAX_URL_BYTES=2000000
+NEXT_PUBLIC_URL_INGEST_ENABLED=true
