Production‑ready hardening pass is in: config validation, sizing guards, retention/backup ops, worker reliability, DB pooling, and source status fidelity with updated_at.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,20 @@
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_EMBED_MODEL=text-embedding-3-small
+OPENAI_TIMEOUT_SECONDS=30
+OPENAI_MAX_RETRIES=3
 AI_PROVIDER=openai
 DEBUG=false
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=lfcie
 DATABASE_URL=postgresql+psycopg://postgres:postgres@postgres:5432/lfcie
 REDIS_URL=redis://redis:6379/0
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
+DB_CONNECT_TIMEOUT=10
 MAX_CHUNKS_PER_QUERY=8
 PER_SOURCE_RETRIEVAL_LIMIT=10
 RERANK_ENABLED=true
@@ -18,6 +28,7 @@ CHUNK_CHAR_OVERLAP=800
 MAX_PDF_BYTES=25000000
 MAX_PDF_PAGES=300
 MAX_URL_BYTES=2000000
+MAX_TEXT_BYTES=2000000
 EMBED_BATCH_SIZE=64
 EMBED_DIM=1536
 API_KEY=
@@ -26,6 +37,7 @@ NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_MAX_PDF_BYTES=25000000
 NEXT_PUBLIC_MAX_PDF_PAGES=300
 NEXT_PUBLIC_MAX_URL_BYTES=2000000
+NEXT_PUBLIC_MAX_TEXT_BYTES=2000000
 NEXT_PUBLIC_URL_INGEST_ENABLED=true
 RATE_LIMIT_BACKEND=memory
 RATE_LIMIT_RPS=0
@@ -39,5 +51,19 @@ OTEL_EXPORTER_OTLP_ENDPOINT=
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 URL_ALLOWLIST=
 STORAGE_ROOT=storage
+WORKER_CONCURRENCY=2
+WORKER_PREFETCH_MULTIPLIER=1
+WORKER_MAX_TASKS_PER_CHILD=100
+WORKER_VISIBILITY_TIMEOUT=3600
+WORKER_TASK_TIME_LIMIT=0
+WORKER_TASK_SOFT_TIME_LIMIT=0
+RETENTION_ENABLED=false
+RETENTION_DAYS_SOURCES=0
+RETENTION_DAYS_QUERIES=0
+RETENTION_DAYS_ANSWERS=0
+RETENTION_BATCH_SIZE=200
+RETENTION_INTERVAL_SECONDS=86400
+BACKUP_INTERVAL_SECONDS=86400
+BACKUP_RETENTION_DAYS=7
 APP_UID=1000
 APP_GID=1000
