--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -5,4 +5,5 @@ NEXT_PUBLIC_API_KEY=
 NEXT_PUBLIC_MAX_PDF_BYTES=25000000
 NEXT_PUBLIC_MAX_PDF_PAGES=300
 NEXT_PUBLIC_MAX_URL_BYTES=2000000
+NEXT_PUBLIC_MAX_TEXT_BYTES=2000000
 NEXT_PUBLIC_URL_INGEST_ENABLED=true
