Added an nginx reverse proxy with TLS + rate limiting, and wired prod compose/README to use it.
Reverse proxy config added in nginx.conf and app.conf, including rate limiting, real IP handling, and / -> web + /api -> api proxying.
Production compose now exposes only nginx on 80/443 and routes internal traffic to API/web; API/web ports are no longer published in docker-compose.prod.yml.
TLS cert location and production base URL guidance documented in README.md, plus a cert placeholde

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,14 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+      - name: Verify dependency lock
+        run: |
+          test -f constraints.lock
+          rg -n "constraints.lock" Dockerfile Dockerfile.prod
+          if rg -n "constraints.txt" Dockerfile Dockerfile.prod; then
+            echo "constraints.txt should not be used in Dockerfiles." >&2
+            exit 1
+          fi
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
