--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -60,7 +60,7 @@ services:
     volumes:
       - storage_data:/app/storage
     command: >
-      /bin/sh -c "alembic upgrade head && uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-${WEB_CONCURRENCY:-2}}"
+      uvicorn apps.api.app.main:app --host 0.0.0.0 --port 8000 --workers ${UVICORN_WORKERS:-${WEB_CONCURRENCY:-2}}
 
   web:
     image: lfcie-web
@@ -93,6 +93,16 @@ services:
     volumes:
       - storage_data:/app/storage
     command: celery -A services.ingest.worker.celery_app worker --loglevel=info
+
+  migrate:
+    image: lfcie-prod
+    profiles:
+      - migrate
+    env_file: .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: alembic upgrade head
 
   maintenance:
     image: lfcie-prod
